# ghc-perf

./: .gitignore  Analyzers.md  CHANGELOG.md  FEATURES.md  LICENSE  README.md  ROADMAP.md  cabal.project  ghc-perf.cabal  ghc-profiler.cabal
app/: Main.hs
src/: Main.hs
src/GHC/Profiler/: Compiler.hs  Component.hs  Responder.hs  State.hs  UI.hs
src/GHC/Profiler/Component/: RtsStats.hs
src/GHC/Profiler/UI/: Events.hs  Html.hs  Monad.hs  Style.hs
