cabal-version:      3.4

name:               ghc-profiler
version:            0.1.0.0
synopsis:           Performance tuning tool for GHC

license:            BSD-3-Clause
license-file:       LICENSE

author:             Sylvain Henry
maintainer:         sylvain@haskus.fr

category:           Development
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall -fhide-source-paths -threaded

executable ghc-profiler
    import:           warnings

    main-is:          Main.hs

    other-modules:
      GHC.Profiler.UI
      GHC.Profiler.UI.Events
      GHC.Profiler.UI.Style
      GHC.Profiler.State
      GHC.Profiler.Compiler

    build-depends:
      base,
      lucid2,
      lucid2-htmx,
      wai,
      warp,
      http-types,
      clay,
      temporary,
      directory,
      filepath,
      process,
      text,
      bytestring,
      sqlite-simple

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010
